# colibri_commandline

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  cmdcalculate.c  cmdcommand.h  cmdfwupdate.c  cmdfwupdate.h  cmdmeasure.c  cmdsave.c  cmdsave.h  cmdselftest.c  colibri.c  colibri.h  main.c  printerror.c
src/: cmdbaseline.c  cmdbaseline.h  cmdcalculate.h  cmdcommand.c  cmddata.c  cmddata.h  cmdget.c  cmdget.h  cmdlevelling.c  cmdlevelling.h  cmdmeasure.c  cmdmeasure.h  cmdsave.c  cmdselftest.h  cmdset.c  cmdset.h  colibri.c  colibri.h  colibriJson.c  colibriJson.h  colibri_unix.c  colibri_win.c  main.c  printerror.c  printerror.h
